fix line wrapping of ssh key on contact page

--- a/_src/sass/custom/_chrispk.scss
+++ b/_src/sass/custom/_chrispk.scss
@@ -7,3 +7,12 @@
 		margin-left:-15px;
 	}
 }
+
+.language-ssh-public-key {
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+ }
